logs/dag_id=time_task/run_id=manual__2023-05-31T13:22:22.572033+00:00/task_id=create_table/attempt=1.log
[2023-05-31T13:22:23.131+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: time_task.create_table manual__2023-05-31T13:22:22.572033+00:00 [queued]>
[2023-05-31T13:22:23.137+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: time_task.create_table manual__2023-05-31T13:22:22.572033+00:00 [queued]>
[2023-05-31T13:22:23.137+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-05-31T13:22:23.138+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-05-31T13:22:23.138+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-05-31T13:22:23.146+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): create_table> on 2023-05-31 13:22:22.572033+00:00
[2023-05-31T13:22:23.149+0000] {standard_task_runner.py:55} INFO - Started process 615 to run task
[2023-05-31T13:22:23.152+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'time_task', 'create_table', 'manual__2023-05-31T13:22:22.572033+00:00', '--job-id', '13', '--raw', '--subdir', 'DAGS_FOLDER/insertTime.py', '--cfg-path', '/tmp/tmpkv3mw5lf']
[2023-05-31T13:22:23.153+0000] {standard_task_runner.py:83} INFO - Job 13: Subtask create_table
[2023-05-31T13:22:23.203+0000] {task_command.py:389} INFO - Running <TaskInstance: time_task.create_table manual__2023-05-31T13:22:22.572033+00:00 [running]> on host b61c8577f382
[2023-05-31T13:22:23.250+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=time_task
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-05-31T13:22:22.572033+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-05-31T13:22:22.572033+00:00
[2023-05-31T13:22:23.251+0000] {sql.py:254} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS myTime (
                curr_time CURRENT_TIMESTAMP
            );
        
[2023-05-31T13:22:23.258+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-05-31T13:22:23.370+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-05-31T13:22:23.376+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS myTime (
                curr_time CURRENT_TIMESTAMP
            );
        , parameters: None
[2023-05-31T13:22:23.378+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CURRENT_TIMESTAMP"
LINE 3:                 curr_time CURRENT_TIMESTAMP
                                  ^

[2023-05-31T13:22:23.389+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=time_task, task_id=create_table, execution_date=20230531T132222, start_date=20230531T132223, end_date=20230531T132223
[2023-05-31T13:22:23.398+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 13 for task create_table (syntax error at or near "CURRENT_TIMESTAMP"
LINE 3:                 curr_time CURRENT_TIMESTAMP
                                  ^
; 615)
[2023-05-31T13:22:23.447+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-31T13:22:23.469+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
